Implementation of GithubService.java